Updated database backend
